@@ -54,3 +54,4 @@ list, simply refer to the commit messages: http://code.google.com/p/yourls/sourc
 
 1.4.4
 - added: plugin architecture! OMG plugins!
+- added directory /user, config.php can be moved there
